--- a/LogicSimulatorBase/app/src/main/res/layout/activity_main.xml
+++ b/LogicSimulatorBase/app/src/main/res/layout/activity_main.xml
@@ -6,24 +6,11 @@
     android:layout_height="match_parent"
     tools:context=".LogicSimulator">
 
-    <ImageView
-        android:id="@+id/test"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="228dp"
-        android:layout_marginEnd="142dp"
-        android:layout_marginRight="142dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:src="@drawable/and" />
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="wrap_content"
+    <VideoView
+        android:id="@+id/videoview"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="228dp"
-        android:layout_marginEnd="142dp"
-        android:layout_marginRight="142dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:src="@tools:sample/avatars" />
