--- a/LogicSimulatorBase/app/src/main/res/layout/button_menu.xml
+++ b/LogicSimulatorBase/app/src/main/res/layout/button_menu.xml
@@ -7,6 +7,7 @@
     android:layout_height="match_parent" >
 
     <HorizontalScrollView
+        android:translationZ="90dp"
         android:id="@+id/menuScroll"
         android:layout_width="0dp"
         android:layout_height="50dp"
@@ -188,7 +189,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:contentDescription="@string/grid_draw"
-        app:layout_constraintBottom_toTopOf="@+id/menuScroll"
+        app:layout_constraintBottom_toBottomOf="@+id/menuScroll"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
